# openGL_1

./: CMakeLists.txt  main.cpp
libs/glad/include/glad/: glad.h
src/: fragment_shader.glsl  fragment_shader1.glsl  fragment_shader2.glsl  fragment_shader3.glsl  fragment_shader4.glsl  fragment_shader5.glsl  fragment_shader_clouds.glsl  fragment_shader_zooming_circles.glsl  glad.c  main.cpp  my_marcher.glsl  vertex_shader.glsl
